app/assets/stylesheets/static_pages.css.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/*** HOME PAGE CUSTOMIZATIONS ***/

/* Customize container holding the content of the homepage */

@media screen and (max-device-width: 800px) {
  .home { 
    height: calc(100% - 80px);
    width: 100%;
    background: image_url("banquet_fa14.jpg") no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
  }
  #bgvid { 
    display: none; 
  }
}

.home {
  width: 100%;
  height: 100%;
  overflow: hidden;
  top: -65px;
  position: relative;
}

.home-page {
  text-align: center;
  color: white;
  width: 100%;
  position: absolute;
  top: 30%;
}

.home-heading {
  font-size: 5em;
}

.home-caption {
  font-size: 1.6em;
}

.rush-caption {
  font-size: 1.8em;
  margin-top: 36px;
}

.rush-caption a {
  text-decoration: none;
  color: white;
  border: 2px solid white;
  padding: 5px 12px 5px 12px;
}

.rush-caption a:hover {
  color: #007bb6;
  border: 2px solid #007bb6;
}

#bgvid {
  position: relative;
  min-width: 100%;
  min-height: 100%;
  z-index: -100;
}



/*** FAQ Page Customizations ***/

.faq-wrapper {
  width: 80%;
  margin: auto;
  font-family: "cyntho_proregular", sans-serif;
}

// Customize the list of questions on the rush page
.faq-wrapper .faq-ul {
  text-align: center;
  list-style-type: none;
  line-height: 2em;
  font-size: 1.2em;
}

// Customize the list of questions on the rush page
.faq-wrapper .faq-ul a {
  color: black;
  text-decoration: none;
}

// Customize the content of the questions on the rush page
.faq-wrapper a {
  color: black;
}

// Customize the subheadings of each question
.faq-wrapper a p {
  font-size: 1.2em;
}



/*** Rush Page Customizations ***/

#rush-banner {
  background: image_url("rush_2015.jpg") no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.application-button-wrapper {
  text-align: center;
  width: 100%;
  margin-top: -20px;
  padding-top: 70px;
  padding-bottom: 20px;
}

.application-button-wrapper a {
  padding: 0.55em;
  font-size: 3.5em;
  text-decoration: none;
  color: black;
}

.application-button-wrapper a:hover {
  color: #007bb6;
}

.rush-schedule-wrapper {
  width: 100%;
  background: #1e1e1e;
  color: white;
  text-align: center;
  padding: 50px;
}

.rush-schedule-wrapper div {
  width: 80%;
  margin: auto;
  margin-top: 45px;
}

.rush-schedule-heading {
  font-size: 3em;
}

.rush-schedule-subheading {
  font-size: 2em;
}

.rush-schedule-caption {
  font-size: 1.25em;
}



/*** About Page Customizations ***/

#about-banner {
  background: image_url("san_francisco_banner.jpg") no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.about-nav {
  margin-top: 30px;
  margin-bottom: 30px;
  text-align: center;
  background: white;
  font-size: 1.2em;
}

.about-nav ul {
  list-style-type: none;
}

.about-nav ul li {
  display: inline;
  margin-left: 0.2em;
  margin-right: 0.2em;
}

.about-nav ul a {
  text-decoration: none;
  color: black;
}

.circle {
  display: inline-block;
  width: 0.2em;
  height: 0.2em;
  margin-bottom: 5px;
  background: black;
  -moz-border-radius: 50px/50px;
  -webkit-border-radius: 50px 50px;
  border-radius: 50px/50px;
}

.about-wrapper {
  text-align: center;
  text-decoration: none;
  padding-top: 3em;
  padding-bottom: 3em;
}

.about-wrapper p {
  width: 60%;
  margin: auto;
  text-decoration: none;
}

@media (max-width: 767px) {
  .about-wrapper p {width:90%;}
}

div .about-subheading {
  font-size: 2em;
}

div .about-caption {
  text-align: left;
  font-size: 1.2em;
  margin-top: 1.5em;
}

.remove-hover-effect:hover {
  text-decoration: none;
}



/*** APPLICATION SUBMIITED PAGE CUSTOMIZATIONS ***/

.submitted-heading {
  padding-top: 3%;
  font-size: 2em;
}

.submitted-caption a {
  text-decoration: none;
  color: #007bb6;
  font-size: 1.5em;
}



/*** Contact Page Customizations ***/

#contact {
  background: black;
}

.contact-heading {
  padding-top: 3%;
  font-size: 2em;
  color: white;
}

.contact-caption a {
  text-decoration: none;
  color: #007bb6;
  font-size: 1.5em;
}



/*** Application Submitted PAge Customizations ***/

#application-submitted-layer {
  background-color: black;
}


/*** PROFESSIONAL SERVICES PAGE CUSTOMIZATIONS ***/

